# cs5834_final_project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  urban.ipynb
urban_project/: data_loader.py
urban_project/analyser/: analyse_distance.py  analyse_poi.py  analyse_season.py  analyzer.py
urban_project/feature_engineer/: analyse_features.py
urban_project/train_model/: elasticnet_regression.py  lasso_regression.py  linear_regression.py  processor.py  random_forest.py  ridge_regression.py
