[tool.poetry]
name = "urban-project"
version = "0.1.0"
description = ""
authors = ["XuYongzhe-ethz <99412778+XuYongzhe-ethz@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "urban_project"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
